Prevent double continue in pause. Add logout link at end.

--- a/deepdrummer/webserver/templates/finished.html
+++ b/deepdrummer/webserver/templates/finished.html
@@ -15,6 +15,10 @@
             <p>
                 We will keep you updated on the results of the experiment.
             </p>
+
+            <p>
+            Click <a href="/logout">here</a> to log out and take the experiment again.
+            </p>
         </div>
     </body>
 </html>
