--- a/deepdrummer/webserver/templates/results.html
+++ b/deepdrummer/webserver/templates/results.html
@@ -37,6 +37,10 @@
             <p>
             Click <a href="{{ json_url }}">here</a> to download your raw JSON data.
             </p>
+
+            <p>
+            Click <a href="/logout">here</a> to log out and take the experiment again.
+            </p>
         </div>
 
     </body>
